--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
         let isPanning = false;
         let panStart = { x: 0, y: 0 };
 
-        // Profanity filter (no lookinggg)
+        // Profanity filter
         const CURSE_WORDS = [
             'fuck', 'shit', 'damn', 'ass', 'bitch', 'bastard', 'crap', 'piss',
             'dick', 'cock', 'pussy', 'cunt', 'fag', 'nigger', 'nigga', 'whore',
@@ -1166,8 +1166,10 @@
             if (isPanning) return;
             
             const rect = canvas.getBoundingClientRect();
-            const x = (e.clientX - rect.left - panX) / scale;
-            const y = (e.clientY - rect.top - panY) / scale;
+            const scaleX = canvas.width / rect.width;
+            const scaleY = canvas.height / rect.height;
+            const x = (e.clientX - rect.left) * scaleX;
+            const y = (e.clientY - rect.top) * scaleY;
 
             if (currentTool === 'report') {
                 handleReport(x, y);
@@ -1194,8 +1196,10 @@
             if (!isDrawing || isPanning) return;
 
             const rect = canvas.getBoundingClientRect();
-            const x = (e.clientX - rect.left - panX) / scale;
-            const y = (e.clientY - rect.top - panY) / scale;
+            const scaleX = canvas.width / rect.width;
+            const scaleY = canvas.height / rect.height;
+            const x = (e.clientX - rect.left) * scaleX;
+            const y = (e.clientY - rect.top) * scaleY;
 
             if (['line', 'circle', 'rectangle'].includes(currentTool)) {
                 drawShapePreview(x, y);
